<package format="3">
  <name>urdf_publisher_pkg</name>
  <version>0.0.1</version>
  <description>Robot description publisher</description>

  <maintainer email="jinwoo@example.com">Jinwoo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
